automatically backed up by learn

--- a/app/views/repositories/index.html.erb
+++ b/app/views/repositories/index.html.erb
@@ -12,4 +12,5 @@
     <%= label_tag(:name, "Create a New Repo:") %>
     <%= text_field_tag(:name, nil, id: "new-repo") %>
     <%= submit_tag("Create") %>
+    <% end %> 
 </div>
